<resources>
    <string name="app_name">RPPM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">หน้าแรก</string>
    <string name="nav_check_beacon">ตรวจสอบสถานะอุปกรณ์</string>
    <string name="nav_arm">การกายภาพบำบัดส่วนแขน</string>
    <string name="nav_leg">การกายภาพบำบัดส่วนขา</string>
    <string name="nav_manual">คู่มือการใช้งาน</string>
    <string-array name="nav_item_activity_titles">
        <item>หน้าแรก</item>
        <item>ตรวจสอบสถานะอุปกรณ์</item>
        <item>การกายภาพบำบัดส่วนแขน</item>
        <item>การกายภาพบำบัดส่วนขา</item>
        <item>วิธีการใช้งาน</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sliding">SlidingMenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="nav_content_other">Other</string>
    <string name="ok">OK</string>
    <string name="tArmL">L Arm</string>
    <string name="tArmR">R Arm</string>
    <string name="tKneeL">L Knee</string>
    <string name="tKneeR">R Knee</string>
    <string name="tAnkleL">L Ankle</string>
    <string name="tAnkleR">R Ankle</string>
    <string name="tShinL">L Shin</string>
    <string name="tShinR">R Shin</string>
    <string name="tAngleL">L KneeAngle</string>
    <string name="tAngleR">R KneeAngle</string>
    <string name="tAllSensor"><font size="16"><b>All Sensor</b></font></string>
    <string name="button_getData">Show Distance</string>
    <string name="button_findAngle">Find Angle</string>
    <string name="menu_home">HOME</string>
    <string name="menu_allBeacon">All Beacons</string>
    <string name="menu_newRound">New Round</string>
    <string name="menu_history">History</string>
    <string name="newRound_button_startRound">Start Running</string>
    <string name="tResult_RoundSummary">Round Summary</string>
    <string name="tResult_LeftPercent">Left :</string>
    <string name="tResult_RightPercent">Right :</string>
    <string name="tResult_AngleSim">Angle Simulation</string>
    <string name="tResult_Status">Status</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="under_header_line">_</string>
    <string name="allbeacon_textView_device_connect">Connected</string>
    <string name="allbeacon_textView_device_not_found">Not Found</string>
    <string name="history_textView_header">Round History</string>
    <string name="history_button_clearHistory">Clear History</string>
    <string name="beacon_D4_57_D0">D4:36:39:DE:57:D0</string>
    <string name="beacon_D4_56_C6">D4:36:39:DE:56:C6</string>
    <string name="fragment_chk_beacon_caption">iBeacons STATUS CHECKING</string>
    <string name="fragment_chk_beacon_desc">ตรวจสอบสถานะอุปกรณ์เซ็นเซอร์ iBeacon</string>
    <string name="fragment_home_contentChoice">เลือกประเภทการทำกายภาพบำบัดที่ต้องการ</string>
    <string name="fragment_arm_home_title">Arms</string>
    <string name="fragment_arm_home_caption">ARMS RECOVERING</string>
    <string name="fragment_arm_home_desc">กายภาพบำบัดส่วนแขน</string>
    <string name="fragment_leg_home_title">Arms</string>
    <string name="fragment_leg_home_caption">LEGS RECOVERING</string>
    <string name="fragment_leg_home_desc">กายภาพบำบัดส่วนขา</string>
    <string name="fragment_doing_but_stop">หยุด</string>
    <string name="fragment_doing_tv_angle01">มุม</string>
    <string name="fragment_doing_tv_angle02">องศา</string>
    <string name="fragment_doing_tv_set">เซ็ต</string>
    <string name="fragment_doing_tv_slash">/</string>
    <string name="fragment_doing_tv_treatName">ชื่อท่า</string>
    <string name="fragment_doing_tv_time01">ทำไป</string>
    <string name="fragment_doing_tv_time02">ครั้ง</string>
    <string name="caution_header">ข้อห้ามและข้อควรระวังของการทำกายภาพบำบัด</string>
    <string name="caution_button"><b>เข้าใจ</b></string>
    <string name="caution_1">1. การเคลื่อนไหวข้อให้ผู้ป่วยควรทำช้าๆ</string>
    <string name="caution_2">2. ควรทำการเคลื่อนไหวให้สุดองศาของการเคลื่อนไหวที่ปกติ แต่ควรระวังในรายที่มีการดามเหล็กอยู่ภายในข้อ ภายในกระดูก ต้องไม่ทำเกินกว่าที่ผู้ป่วยทำได้</string>
    <string name="caution_3">3. ในแต่ละท่าทำซ้ำๆท่าละ 10-20 ครั้ง วันละ 2 รอบระหว่างทำให้ผู้ป่วยคิดอยู่เสมอว่ากำลังทำการเคลื่อนไหวด้วยตนเอง</string>
    <string name="caution_4">4. ไม่ควรทำการเคลื่อนไหวหลังจากรับประทานอาหารอิ่มใหม่ๆ หรือในขณะผู้ป่วยมีไข้</string>
    <string name="caution_5">5. หากผู้ป่วยมีภาวะข้ออักเสบระยะเฉียบพลัน หรือแผลเปิดควรทำการเคลื่อนไหวในข้อต่อนั้นด้วยความระมัดระวัง</string>
    <string name="caution_6">6. ขณะทำการเคลื่อนไหวข้อ ถ้าผู้ป่วยปวด หรือพบปัญหาอย่างอื่นตามมา ควรหยุดและปรึกษาแพทย์หรือนักกายภาพบำบัด ไม่ควรให้ผู้ป่วยนอนอย่างเดียวนานๆ ควรให้ผู้ป่วยลุกขึ้นมานั่งบ่อยๆ ควรได้รับการฟื้นฟูทางกายภาพบำบัดอย่างต่อเนื่อง</string>
    <string name="load_app_header">ประโยชน์ของการทำกายภาพบำบัด</string>
    <string name="load_app_content1">1. ช่วยลดการยึดติดของเนื้อเยื่อต่างๆ เช่น กล้ามเนื้อ, เอ็นกล้ามเนื้อ เป็นต้น</string>
    <string name="load_app_content2">2. ช่วยรักษาสภาพของข้อต่อ และเนื้อเยื่อบริเวณนั้นให้เป็นปกติ</string>
    <string name="load_app_content3">3. ช่วยลดอาการเกร็งของกล้ามเนื้อ และช่วยทำให้กล้ามเนื้อมีสภาพความยืดหยุ่นปกติ</string>
    <string name="load_app_content4">4. ช่วยกระตุ้นระบบหมุนเวียนโลหิต</string>
    <string name="load_app_content5">5. ช่วยให้สภาพภายในของข้อต่ออยู่ในสภาพปกติ</string>
    <string name="load_app_content6">6. ลด และป้องกันอาการปวด, เมื่อย ตามข้อและกล้ามเนื้อ</string>
    <string name="load_app_button">เริ่มทำกายภาพ</string>
    <string name="manual_header">คู่มือการใช้งาน</string>
    <string-array name="manual_choice">
        <item>เมนูของแอพพลิเคชัน</item>
        <item>การใช้งานฟังก์ชันกายภาพบำบัด</item>
        <item>ตำแหน่งเซ็นเซอร์และตำแหน่งการวางโทรศัพท์มือถือ</item>
        <item>ข้อแนะนำอื่นๆ</item>
    </string-array>
    <string name="manual_basic_01">เมนูของแอพพลิเคชัน</string>
    <string name="manual_basic_02">***ข้อสำคัญ: ไอคอนเพื่อเปิดแถบเมนูจะอยู่บริเวณมุมซ้ายบนของหน้าจอแอปพลิเคชัน โดยเมนูของแอปพลิเคชันมีดังนี้</string>
    <string name="manual_basic_03">1.1 หน้าแรก: เลือกประเภทการทำกายภาพบำบัด (แขน / ขา)</string>
    <string name="manual_basic_04">1.2 ตรวจสอบสถานะอุปกรณ์: แสดงอุปกรณ์เซนเซอร์ที่เชื่อมต่อกับแอปพลิเคชันผ่านบลูทูธ</string>
    <string name="manual_basic_05">1.3 การกายภาพบำบัดส่วนแขน: เลือกท่ากายภาพบำบัดส่วนแขน มี 5 ท่า ได้แก่ ท่ายกแขนขึ้นและลง, ท่ากางแขนและหุบแขนทางข้างลำตัว, ท่ากางแขนและหุบแขนในแนวตั้งฉากกับลำตัว, ท่าหมุนข้อไหล่ขึ้นและลง, ท่าเหยียดและงอข้อศอก</string>
    <string name="manual_func_02">***ข้อสำคัญ: กรุณาเปิดใช้งานบลูทูธในโทรศัพท์มือถือก่อนเปิดใช้งานแอปพลิเคชัน และ กรุณาปฏิบัติตามข้อควรระวัง / ข้อห้าม หรือข้อแนะนำต่างๆ ที่ระบุไว้ในแอปพลิเคชันอย่างเคร่งครัดเพื่อป้องกันการเกิดอันตรายจากการทำกายภาพบำบัด</string>
    <string name="manual_func_03">2.1 เมื่อกดไอคอนของแอปพลิเคชัน จะแสดงหน้า “ประโยชน์ของการทำกายภาพบำบัด”</string>
    <string name="manual_func_04">2.2 เมื่อกด “เริ่มทำกายภาพ” จะแสดงหน้าแรกให้ผู้ใช้เลือกประเภทการทำกายภาพบำบัดที่ต้องการ โดยจะมี 2 ประเภทคือ กายภาพบำบัดส่วนแขน และกายภาพบำบัดส่วนขา</string>
    <string name="manual_func_05">2.3 เมื่อเลือกประเภทที่ต้องการ จะแสดงกล่องข้อความ “ข้อห้ามและข้อควรระวังของการทำกายภาพบำบัด”</string>
    <string name="manual_func_06">2.4 เมื่อกด “เข้าใจ” จะแสดงหน้าให้ผู้ใช้เลือกท่ากายภาพที่ต้องการ</string>
    <string name="manual_func_07">2.5 เมื่อเลือกท่าที่ต้องการแล้ว จะแสดงกล่องข้อความให้ผู้ใช้กรอก “ตัวเลข” เพื่อเป็นการกำหนดจำนวนเซ็ตในการทำกายภาพบำบัด โดยแต่ละเซ็ตมีจำนวน 10 ครั้ง</string>
    <string name="manual_func_08">2.6 เมื่อกรอกจำนวนรอบและกด “ตกลง” แล้วจะแสดงหน้าเริ่มทำกายภาพบำบัดที่จะแสดงข้อมูลต่างๆ ในการทำกายภาพบำบัด ได้แก่ ชื่อท่า, จำนวนเซ็ต(ที่ผู้ป่วยทำได้ / ที่ผู้ใช้กำหนด), จำนวนครั้งที่ทำกายภาพบำบัด(ที่ผู้ป่วยทำได้ / 10 ครั้ง) และค่ามุมในหน่วยองศาที่ผู้ป่วยทำได้</string>
    <string name="manual_func_09">2.7 เมื่อกด “หยุด” จะมีกล่องข้อความให้ผู้ใช้เลือกว่าจะ “กลับไปหน้าก่อนหน้า” หรือ “ทำต่อ”</string>
    <string name="manual_func_09_1">2.7.1 ถ้าเลือก “กลับไปหน้าก่อนหน้า” จะแสดงหน้าเลือกท่ากายภาพให้ผู้ใช้เลือกท่าอื่นๆ</string>
    <string name="manual_func_09_2">2.7.2 ถ้าเลือก “ทำต่อ” จะกลับเข้าสู่การทำกายภาพบำบัดตามเดิม</string>
    <string name="manual_func_10">2.8 เมื่อทำครบแต่ละเซ็ต จะมีกล่องข้อความแสดงเพื่อแจ้งให้ผู้ใช้ทราบ และให้เลือกว่าจะ “จบการทำกายภาพ” หรือ “ทำต่อ”</string>
    <string name="manual_func_10_1">2.8.1 ถ้าเลือก “จบการทำกายภาพ” จะแสดงหน้าเลือกท่ากายภาพให้ผู้ใช้เลือกท่าอื่นๆ</string>
    <string name="manual_func_10_2">2.8.2 ถ้าเลือก “ทำต่อ” จะแสดงกล่องข้อความให้ผู้ใช้กำหนดจำนวนเซ็ตในการทำกายภาพอีกครั้ง และกลับเข้าสู่การทำกายภาพบำบัดตามเดิม</string>
    <string name="manual_pos_02">***ข้อสำคัญ: ผู้ใช้สามารถตรวจสอบสถานะการเชื่อมต่อระหว่างอุปกรณ์เซนเซอร์กับแอปพลิเคชันได้ที่เมนู “ตรวจสอบสถานะอุปกรณ์”</string>
    <string name="manual_pos_03_0">3.1 ตำแหน่งของอุปกรณ์เซนเซอร์</string>
    <string name="manual_pos_03_1">แอปพลิเคชันนี้ทำงานร่วมกับอุปกรณ์เซนเซอร์ iBeacon จำนวน 8 ตัว ได้แก่</string>
    <string name="manual_pos_03_2">A. ข้อมือด้านซ้าย      B. ข้อมือด้านขวา</string>
    <string name="manual_pos_03_3">C. ข้อพับศอกด้านซ้าย    D. ข้อพับศอกด้านขวา</string>
    <string name="manual_pos_03_4">E. หัวเข่าด้านซ้าย      F. หัวเข่าด้านขวา</string>
    <string name="manual_pos_03_5">G. ข้อเท้าด้านซ้าย	     H. ข้อเท้าด้านขวา</string>
    <string name="manual_pos_03_6">โดยอุปกรณ์เซนเซอร์ iBeacon ทั้ง 8 ตัวจะถูกใส่เอาไว้ในกับผ้ารัดข้อที่จะนำมาใส่ตามส่วนต่างๆ ของร่างกายผู้ป่วยตามตำแหน่งที่กำหนด (A.-F.)</string>
    <string name="manual_pos_04_0">3.2 ตำแหน่งของโทรศัพท์มือถือ</string>
    <string name="manual_pos_04_1">กายภาพบำบัดส่วนแขน</string>
    <string name="manual_pos_04_2">A. ท่ายกแขนขึ้นและลง: ขนานกับอุปกรณ์เซนเซอร์ในตำแหน่งข้อพับศอกในท่าเริ่มต้น</string>
    <string name="manual_pos_04_3">B. ท่ากางแขนและหุบแขนทางข้างลำตัว: ขนานกับอุปกรณ์เซนเซอร์ในตำแหน่งข้อพับศอกในท่าเริ่มต้น</string>
    <string name="manual_pos_04_4">C. ท่ากางแขนและหุบแขนในแนวตั้งฉากกับลำตัว: ขนานกับอุปกรณ์เซนเซอร์ในตำแหน่งข้อพับศอกในท่าเริ่มต้น</string>
    <string name="manual_pos_04_5">D. ท่าหมุนข้อไหล่ขึ้นและลง: ขนานกับอุปกรณ์เซนเซอร์ในตำแหน่งข้อมือในท่าเริ่มต้น</string>
    <string name="manual_pos_04_6">E. ท่าเหยียดและงอข้อศอก: ขนานกับอุปกรณ์เซนเซอร์ในตำแหน่งข้อมือในท่าเริ่มต้น</string>
    <string name="manual_pos_04_7">กายภาพบำบัดส่วนขา</string>
    <string name="manual_pos_04_8">A. ท่างอขาและเหยียดข้อตะโพกและข้อเข่าพร้อมกัน: บริเวณหัวเข็มขัด</string>
    <string name="manual_pos_04_9">B. ท่ากางและหุบข้อตะโพก: ขนานกับอุปกรณ์เซนเซอร์ในตำแหน่งข้อเท้าในท่าเริ่มต้น</string>
    <string name="manual_pos_04_10">C. ท่าหมุนข้อตะโพกเข้าและออก: บริเวณหัวเข็มขัด</string>
    <string name="manual_rec_01">4.1 เมื่อใช้งานอุปกรณ์เซนเซอร์เสร็จ ต้องนำออกจากผ้ารัดข้อให้เรียบร้อยก่อนถอดผ้ารัดข้อออกจากร่างกายผู้ป่วย เพื่อป้องกันความเสียหายที่อาจเกิดขึ้นกับตัวอุปกรณ์เซนเซอร์</string>
    <string name="manual_rec_02">4.2 หากไม่ได้ใช้งาน ห้าม ใส่ถ่านอุปกรณ์เซนเซอร์ iBeacon ค้างไว้เพราะอุปกรณ์นี้ไม่มีสวิตช์เปิด-ปิด ดังนั้นเมื่อใส่ถ่าน พลังงานของถ่านก็จะลดลงเรื่อยๆ แม้จะไม่ได้เชื่อมต่อกับแอปพลิเคชัน</string>
    <string name="manual_rec_03">4.3 อุปกรณ์เซนเซอร์ iBeacon รองรับ Bluetooth 4.0 ขึ้นไป และแอปพลิเคชันนี้สามารถทำงานได้บนระบบปฏิบัติการ Android 5.0 (Lolipop) ขึ้นไปเท่านั้น</string>
</resources>