<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_svg_menu_home_24px"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_check_beacon"
            android:icon="@drawable/ic_svg_menu_add_24px"
            android:title="@string/nav_check_beacon" />
        <item
            android:id="@+id/nav_arm"
            android:icon="@drawable/ic_svg_menu_wifi_tethering_24px"
            android:title="@string/nav_arm" />
        <item
            android:id="@+id/nav_leg"
            android:icon="@drawable/ic_svg_menu_history_24px"
            android:title="@string/nav_leg" />
    </group>

</menu>
