<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gear.rppm.activity.LoadAppActivity">

    <TextView android:id="@+id/load_app_header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/load_app_header"
        android:textSize="@dimen/text_header"
        android:textColor="@color/treatment_good"
        android:textAlignment="center"
        android:textStyle="bold"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text_header_mtop"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <ScrollView android:id="@+id/fragment_home_scrollview"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="115dp"
        android:layout_centerHorizontal="true">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:id="@+id/load_app_content1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:text="@string/load_app_content1"
                android:textSize="@dimen/text_content" />
            <TextView />

            <TextView android:id="@+id/load_app_content2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:text="@string/load_app_content2"
                android:textSize="@dimen/text_content" />
            <TextView />

            <TextView android:id="@+id/load_app_content3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:text="@string/load_app_content3"
                android:textSize="@dimen/text_content"
                />
            <TextView />

            <TextView android:id="@+id/load_app_content4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:text="@string/load_app_content4"
                android:textSize="@dimen/text_content" />
            <TextView />

            <TextView android:id="@+id/load_app_content5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:text="@string/load_app_content5"
                android:textSize="@dimen/text_content" />
            <TextView />

            <TextView android:id="@+id/load_app_content6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:text="@string/load_app_content6"
                android:textSize="@dimen/text_content" />
            <TextView />

        </TableLayout>

    </ScrollView>

    <Button android:id="@+id/load_app_button1"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@drawable/button_buttom"
        android:text="@string/load_app_button"
        android:textSize="@dimen/text_sub_header"
        android:textAlignment="center"
        android:textColor="@color/textSecondary"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
