<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="true">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="20dp">

        <TextView android:text="@string/manual_rec_01"
            android:id="@+id/manual_rec_tv_001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_content"/>

        <TextView android:text="@string/manual_rec_02"
            android:id="@+id/manual_rec_tv_002"
            android:layout_below="@id/manual_rec_tv_001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_content"/>

        <TextView android:text="@string/manual_rec_03"
            android:id="@+id/manual_rec_tv_003"
            android:layout_below="@id/manual_rec_tv_002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/text_content"/>

    </RelativeLayout>
</ScrollView>